Fix margin issue with nav dropdown on mobile - user icon

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -493,6 +493,12 @@ a.remove-item:hover {
         font-size: 1rem;
     }
 
+    /* Fix for nav dropdown on My account on mobile view */
+
+    .dropdown-menu {
+        min-width: 5rem;
+    }  
+
     .navbar-toggler {
         padding: .6rem .6rem;
         font-size: 1rem;
@@ -544,6 +550,7 @@ a.remove-item:hover {
 
     .home_header {
         font-size: 1.3rem;
-    }  
+    }
+
 }
 
